fix: dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,7 @@ body {
     transform: scale(0.8);
     transform-origin: top left;
     width: 125%;
+    transition: background-color 200ms;
 }
 
 html, body {
